# src/types/DashboardData.ts
@@ -1,0 +1,7 @@
+import { AirQualityReading } from './AirQuality';
+
+export interface DashboardData {
+    lastAirQualityReading: AirQualityReading;
+    todayDistance: number;
+    airQualityReadings: AirQualityReading[];
+}
